@@ -4,6 +4,8 @@
 
 == rufus-scheduler - 2.0.16    not yet released
 
+- running job thread: getting rid of the job pointer once job is done
+
 
 == rufus-scheduler - 2.0.15    released 2011/12/20
 
